# Kaleidoscope

./: .env.example  LICENSE  README.md  README_zh.md  audio.py  base.py  head.rpy  img.py  llm_log.py  log_config.py  prompt.py  pyproject.toml  requirements.txt  result_1720635913.txt  web_ui.py
comfyui_workflows/: flux.json  flux_img2img.json  flux_schnell.json  flux_schnell_img2img.json  stable_audio.json
modal/: comfyui.py
novels/: 乡村教师.txt  最后一个问题.txt  朝闻道.txt  项链.txt
scripts/: 朝闻道_person_1748873516.json  朝闻道_person_1749052829.json  朝闻道_result_1748873516.txt  朝闻道_result_1749052829.txt
