[project]
name = "kaleidoscope"
version = "0.1.0"
description = "一个将文字小说转化为视觉小说的AI项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=5.33.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "modal>=1.0.3",
    "nvidia-cuda-runtime-cu12>=12.9.37",
    "nvidia-cudnn-cu12>=9.10.1.4",
    "nvidia-cufft-cu12>=11.4.0.6",
    "onnxruntime>=1.22.0",
    "python-dotenv>=1.1.0",
    "rembg[gpu]>=2.0.66",
    "rich>=14.0.0",
]
